# faker_demo

./: .gitignore  README.md  pyproject.toml
src/: analysis.ipynb  generate_random_people.py
src/core/: __init__.py  constants.py  dependencies.py
src/core/validators/faker_validators/: __init__.py  validators.py
src/domain/: __init__.py
src/domain/character/: __init__.py  base.py  schemas.py
src/domain/item/: base.py
src/domain/item_container/: base.py  methods.py
src/domain/person/: schemas.py
src/person_cleaner/: __init__.py  __main__.py  constants.py  main.py
src/person_db/: __init__.py  constants.py  main.py
src/person_db/.data/raw/: people.csv
src/person_db/domain/person/: __init__.py  schemas.py
src/person_generator/: __init__.py  constants.py  main.py
src/person_generator/domain/person/: __init__.py  methods.py  schemas.py
src/person_generator/utils/: __init__.py
src/person_generator/utils/df_utils/: __init__.py  operations.py
src/rpg/: random_character.py
src/rpg/domain/: __init__.py
src/rpg/domain/character/: __init__.py  base.py  schemas.py
src/rpg/domain/item/: __init__.py  base.py  schemas.py
src/rpg/domain/item_container/: __init__.py  base.py  methods.py  schemas.py
src/sample/: fake_data_demo.py  main.py  providers_demo.py  random_csv_data.py
