[project]
name = ""
version = ""
description = ""
authors = [
    {name = "redjax", email = "none@none.com"},
]
dependencies = [
    "Faker>=21.0.0",
    "pydantic>=2.5.2",
    "polars-lts-cpu>=0.20.1",
    "pyarrow>=14.0.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

