[project]
name = ""
version = ""
description = ""
authors = [{ name = "redjax", email = "none@none.com" }]
dependencies = [
    "Faker>=21.0.0",
    "pydantic>=2.5.2",
    "polars-lts-cpu>=0.20.1",
    "pyarrow>=14.0.2",
    "red-utils>=0.2.15",
    "loguru>=0.7.2",
    "msgpack>=1.0.7",
    "sqlalchemy>=2.0.23",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.27.1",
]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.12.0",
    "ruff>=0.1.8",
    "pytest>=7.4.3",
    "pre-commit>=3.6.0",
]

[tool.pdm.scripts]

###############
# Format/Lint #
###############

# Lint with black & ruff
lint = { shell = "pdm run ruff check . --fix && pdm run black ." }
# Check only, don't fix
check = { cmd = "black ." }
# Check and fix
format = { cmd = "ruff check . --fix" }

######################
# Export Requirement #
######################

#  Export production requirements
export = { cmd = "pdm export --prod -o requirements.txt --without-hashes" }
#  Export only development requirements
export-dev = { cmd = "pdm export -d -o requirements.dev.txt --without-hashes" }
## Uncomment if/when using a CI group
# export-ci = { cmd = "pdm export -G ci -o requirements.ci.txt --without-hashes" }
